2002-02-04  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_libart.c: Slow but working libart freetype renderer,
	with color!

2002-02-03  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* app/render_gdk.c (draw_string): Fixed gc_function bug.

	* lib/widgets.c (dia_font_selector_init): Sorts the font list.

	* lib/font.c (freetype_render_string): 
	* lib/font.h:
	* app/render_gdk.c:
	* app/render_gdk.h: Changed freetype_render_string to use
	callback.  Rendering is broken.

2002-02-03  Cyrille Chepelov  <cyrille@chepelov.org>

	Patch from Matthieu Sozeau <mattam@netcourrier.com>:

	* objects/UML/uml.h:    
	* objects/UML/uml.c: added UMLInheritanceType and isQuery
	(constant) UML Operation attributes. UMLInheritanceType is either
	UML_ABSTRACT or UML_POLYMORPHIC  or UML_LEAF.
 
        * objects/UML/class.h:
	* objects/UML/class.c:  
	* objetcs/UML/class_dialog.c: added code to handle new
	UMLOperation attributes via a GtkMenu and a checkbox.

2002-02-03  Akira TAGOH  <tagoh@redhat.com>

	* app/disp_callbacks.c (ddisplay_realize): fixed XIM issue.
	several client doesn't work with previous codes.

2002-02-01  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/font.c (freetype_render_string): Kerning.  Very few fonts
	seem to use it.

2002-02-02  Akira TAGOH  <tagoh@redhat.com>

	* app/disp_callbacks.c (ddisplay_canvas_events): fixed crashes,
	when doing the operation like invert the objects after active view is
	destroyed. when changes focus, it needs to set active_display.

	* app/layer_dialog.c (dia_layer_update_from_layer):
	(layer_dialog_edit_layer): need to convert to locale encoding
	if GTK_DOESNT_TALK_UTF8_WE_DO is defined.
	(edit_layer_ok_callback):
	need to convert to UTF8 if GTK_DOESNT_TALK_UTF8_WE_DO is defined.

	* lib/diagramdata.c (new_diagram_data): ditto.

	* app/layer_dialog.c (layer_dialog_new_callback): ditto.

	* lib/diagramdata.c (new_layer): use utfchar instead of char for
	argument.
